Fixed a bug in the registration and some text overflow bugs

--- a/splash/style.css
+++ b/splash/style.css
@@ -27,8 +27,8 @@ body {
     }
     .object
     {
-        position:relative;top: 47vh;
-                            left: 47vw;
+        position:relative;top: 46vh;
+                            left: 46vw;
         animation: rotation 0.75s infinite linear;
     }
 
